# cuckoo_clock

./: .pre-commit-config.yaml  README.md  get_os.py  main.py  pyproject.toml  requirements.txt
